# screen

./: .gitignore  .gitmodules  CMakeLists.txt  screen.c  screen.h  screen_a.c  screen_a.h  screen_fileloader.h  screen_keycode.h
ConfigLoader/: screen_configloader_file.c  screen_configloader_file.h
Console/: screen_console.c  screen_console.h  screen_console_a.c  screen_console_a.h  screen_console_ws.c  screen_console_ws.h
FileWatcher/: screen_filewatcher.c  screen_filewatcher.h  screen_fwtch.c  screen_fwtch.h
NetSync/: screen_netsync.c  screen_netsync.h
SceneLoader/: screen_sceneloader_file.c  screen_sceneloader_file.h
Sync/: screen_console.h  screen_sync.c  screen_sync.h  screen_sync_client.c  screen_sync_server.c
Utils/: screen_utils_sdl.c  screen_utils_sdl.h
Watcher/: screen_watcher.c  screen_watcher.h
config_loader/: screen_config_loader_file.c  screen_config_loader_file.h
imp/: atomic.h  sleep.h  tray.h
imp/base64/: base64.c  base64.h
imp/curl/lib/: libcurl_a.lib
imp/dyad/: dyad.c
imp/gettimeofday/: gettimeofday.c  gettimeofday.h
imp/glad/include/glad/: glad.h
imp/glad/src/: glad.c
imp/nxjson/: nxjson.c
imp/oxwebsocket/: oxwebsocket.c
imp/stb/: a.c
imp/threads/: threads.h
imp/webby/: webby.c  webby_win32.h
player/: main.c
scene_loader/: screen_scene_loader.c  screen_scene_loader.h  screen_scene_loader_file.c
scenes/: Atmospheric Scattering.frag  BRDF Microfacet Sampling.frag  Bi_path_tracing.frag  Bi_path_tracing2.frag  Dining_room.frag  Direct Light using MIS.frag  Monte Carlo path tracer.frag  Path tracing cornellbox with MIS.frag  Simple_path_tracer.frag  Sky with clouds.frag  SkyGradient.frag  Yet another Cornell Box.frag  common.frag  config.json
scenes/00/: image.frag  index.json
scenes/2D Canvas with UI/: a.frag  image.frag  index.json
scenes/A Stupidly Expensive Pathtracer/: a.frag  image.frag  index.json
scenes/Another terrible pathtracer/: a.frag  image.frag
scenes/Basic Montecarlo/: a.frag  image.frag
scenes/Basic PT/: a.frag  image.frag  index.json
scenes/Castle Tunnel/: a.frag  b.frag  c.frag  d.frag  image.frag  index.json
scenes/Disney Principled BRDF/: a.frag  b.frag  image.frag  index.json
scenes/Edge of atmosphere/: image.frag  index.json
scenes/Floating Mountains/: image.frag  index.json
scenes/Jack-o'-lantern's Revenge/: a.frag  b.frag  c.frag  common.frag  d.frag  image.frag  index.json
scenes/Light Propagation in Slow-Motion/: b.frag  c.frag  image.frag  index.json
scenes/MandelboxShrine/: a.frag  image.frag
scenes/Mirrored spinning top/: a.frag  image.frag  index.json
scenes/Path Tracer MIS/: a.frag  image.frag  index.json
scenes/Path tracer Temporal AA/: a.frag  b.frag  image.frag  index.json
scenes/Pathtracing spheres/: a.frag  b.frag  image.frag  index.json
scenes/Progressive Lightmap Render/: a.frag  b.frag  image.frag  index.json
scenes/Ray Tracing - Primitives/: a.frag  common.frag  image.frag  index.json
scenes/Real time PBR Volumetric Clouds/: image.frag  index.json
scenes/Round Rock Island/: image.frag  index.json
scenes/Sky001/: image.frag  index.json
scenes/Some boxes/: a.frag  image.frag  index.json
scenes/Sponza pt1/: a.frag  b.frag  common.frag  d.frag  image.frag  index.json
scenes/Sponza pt2/: a.frag  common.frag  image.frag  index.json
scenes/Voronoi Canyon/: a.frag  image.frag  index.json
scenes/base/: a.frag  image.frag  index.json
scenes/camera controls/: a.frag  b.frag  c.frag  common.frag  image.frag  index.json
scenes/interior GI/: a.frag  image.frag  index.json
scenes/path tracer with motion blur/: a.frag  b.frag  image.frag  index.json
scenes/test multipass raytrace/: a.frag  image.frag  index.json
